category cho thanh search

--- a/InfinityStore/Infinity.Store/Views/Shared/_Layout.cshtml
+++ b/InfinityStore/Infinity.Store/Views/Shared/_Layout.cshtml
@@ -6,10 +6,6 @@
 @inject ICategoryService CategoryService
 @{
     var globalSetting = _settings.Get();
-    var requestCultureFeature = Context.Features.Get<IRequestCultureFeature>().RequestCulture;
-
-    var cateData = CategoryService.GetToShowMenu(requestCultureFeature.Culture.ThreeLetterISOLanguageName);
-    var jCateData = Newtonsoft.Json.JsonConvert.SerializeObject(cateData);
 }
 <!DOCTYPE html>
 <html>
@@ -36,17 +32,8 @@
     <link rel="stylesheet" href="~/content/css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="~/content/css/style.css" type="text/css">
 </head>
-<style>
-    .dropdown-submenu {
-        position: relative;
-    }
-
-        .dropdown-submenu .dropdown-menu {
-            top: 0;
-            left: 100%;
-            margin-top: -1px;
-        }
-</style>
+@Html.Hidden("build-categories-api-endpoint", Url.Action("buildCategories", "global"))
+@Html.Hidden("cateDefaultItemLocalizer", Localizer["All Categories"].Value)
 <body>
     <!-- Page Preloder -->
     <div id="preloder">
@@ -90,36 +77,17 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-7 col-md-7">
+                    <div class="col-lg-8 col-md-8">
                         <div class="advanced-search">
-                            <input id="cateDataStr" value="@jCateData" hidden />
-                            <button id="js-search-selected-category" data-selected-cate-id="0" type="button" class="category-btn custom-overflow-default" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">All Categories</button>
-                            <ul id="search-category-dropdown-root" class="dropdown-menu" style="white-space: nowrap;">
-                                @for (int i = 1; i <= 6; i++)
-                                {
-                                <li id="search-category-dropdown-root" class="dropdown-submenu" style="white-space: nowrap;">
-                                    <span style="cursor: pointer;" class="dropdown-item js-search-category-item can-expand" data-selected-cate-id="@i">
-                                        <span>Category Category Category Category Category @i</span>
-                                        <i class="can-expand fa fa-angle-right"></i>
-                                    </span>
-                                    <ul class="dropdown-menu" style="white-space: nowrap;">
-                                        @for (int j = 1; j <= 3; j++)
-                                        {
-                                            <li><span style="cursor: pointer;" class="dropdown-item js-search-category-item" data-selected-cate-id="@i">Category @i . @j</span></li>
-                                        }
-                                    </ul>
-                                </li>
-                                }
-                                @*<div class="dropdown-divider"></div>
-                                    <span style="cursor: pointer;" class="dropdown-item js-search-category-item" data-selected-cate-id="-1">Category Category Category Category</span>*@
-                            </ul>
+                            <button id="js-search-selected-category" data-selected-cate-id="0" type="button" class="category-btn custom-overflow-default" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">@Localizer["All Categories"]</button>
+                            <span id="search-category-dropdown-root"></span>
                             <div class="input-group">
                                 <input type="text" placeholder="@Localizer["What do you need?"]">
                                 <button type="button"><i class="ti-search"></i></button>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 text-right col-md-3">
+                    <div class="col-lg-2 text-right col-md-2">
                         <ul class="nav-right">
                             <li class="heart-icon">
                                 <a href="#">
