--- a/InfinityStore/Infinity.Store/Views/Shared/_Layout.cshtml
+++ b/InfinityStore/Infinity.Store/Views/Shared/_Layout.cshtml
@@ -170,8 +170,7 @@
                         <ul class="dropdown-menu depart-ul">
                             <li class="dropdown-submenu"><a tabindex="-1" href="#"><span>New </span></a></li>
                             <li class="dropdown-submenu"><a tabindex="-1" href="#"><span> dropdown dropdown dropdown dropdown dropdown</span></a></li>
-                            <li class="dropdown-submenu">
-                                <a class="test" tabindex="-1" href="#"><span>New dropdown</span> <i class="fa fa-angle-right"></i></a>
+                            <li class="dropdown-submenu can-expand"><a class="test" tabindex="-1" href="#"><span>New dropdown</span> <i class="fa fa-angle-right"></i></a>
                                 <ul class="dropdown-menu depart-ul">
                                     <li><a tabindex="-1" href="#">2nd level dropdown</a></li>
                                     <li><a tabindex="-1" href="#">2nd level dropdown</a></li>
@@ -185,7 +184,6 @@
                                 </ul>
                             </li>
                         </ul>
-
                     </div>
                 </div>
                 <nav class="nav-menu mobile-menu">
